# ollama_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
run/: inference.py  learning.py  main.py
run/conf/: config.yaml
src/ollama_rag/: __init__.py  chatpdf.py  conf.py  model.py
tests/: conftest.py  test_chatpdf.py
