[project]
name = "ollama_rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastembed>=0.5.1",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.3",
    "pypdf>=5.2.0",
    "streamlit>=1.41.1",
    "streamlit-chat>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_rag"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
